--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
           <!-- 1. خوارزميات الترتيب (Sorting) - تم التعديل إلى Div مع أزرار داخلية -->
-          <a href="sorting.html">
+
+          <a
+            href="sorting.html"
+            class="card-link block bg-white p-6 rounded-xl shadow-xl border-t-4 border-indigo-200 hover:border-indigo-600 transition"
+          >
             <div class="text-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -99,27 +103,6 @@
               </p>
             </div>
           </a>
-
-          <div
-            class="card-container block bg-white p-6 rounded-xl shadow-xl border-t-4 border-red-500 transition group"
-          >
-            <!-- الأزرار الفرعية للترتيب -->
-            <!-- <div class="space-y-2 pt-4 border-t border-gray-200">
-              <a
-                href="bubble_sort.html"
-                class="w-full block text-center bg-red-100 hover:bg-red-200 text-red-700 py-1.5 px-4 rounded-lg font-medium transition duration-200 shadow-md hover:shadow-lg"
-              >
-                خوارزمية الفقاعة
-              </a>
-              <a
-                href="selection_sort.html"
-                class="w-full block text-center bg-red-100 hover:bg-red-200 text-red-700 py-1.5 px-4 rounded-lg font-medium transition duration-200 shadow-md hover:shadow-lg"
-              >
-                خوارزمية الاختيار
-              </a>
-            </div> -->
-          </div>
-
           <!-- 2. خوارزميات البحث (Searching) - بقي كبطاقة رابط واحدة -->
           <a
             href="searching.html"
