--- a/quran/index.html
+++ b/quran/index.html
@@ -15,7 +15,7 @@
       content="القرآن الكريم, قراءة القرآن, تفسير القرآن, استماع القرآن, القرآن الكريم كامل"
     />
     <meta name="theme-color" content="#1e3a8a" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
     <link
       rel="icon"
       type="image/png"
