--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
     </style>
   </head>
   <body>
-    <!-- قسم الهيرو (الترويسة الرئيسية) -->
+    <!-- قسم الهيرو (الترويسة الرئيسية) - min-h-screen و Flexbox للتوسيط الكامل -->
     <header
-      class="hero-section py-20 text-white min-h-screen shadow-2xl h-full"
+      class="hero-section text-white shadow-2xl min-h-screen flex items-center justify-center"
     >
       <!-- CANVAS: سيتم وضعها كخلفية متحركة -->
       <canvas id="networkCanvas"></canvas>
 
-      <div class="hero-content max-w-6xl mx-auto px-4 text-center">
+      <div class="hero-content max-w-6xl mx-auto px-4 text-center p-8">
         <!-- استخدام Animate.css: fadeInDown ومدة أطول (animate__slow) -->
         <h1
           class="text-5xl md:text-6xl font-extrabold mb-4 animate__animated animate__fadeInDown animate__slow"
@@ -291,23 +291,23 @@
     <!-- قسم معلومات المطور -->
     <section class="bg-gray-100 py-12">
       <div class="max-w-6xl mx-auto px-4">
-        <h2
-          class="text-4xl font-bold text-center mb-12 text-indigo-700 border-b-4 border-indigo-200 inline-block pb-1 animate__animated animate__zoomIn animate__delay-1s"
+        <h3
+          class="text-3xl font-bold text-center mb-10 text-gray-800 animate__animated animate__fadeInDown"
         >
           المطور وراء هذا المشروع
-        </h2>
+        </h3>
         <div
-          class="bg-white p-8 rounded-xl shadow-2xl border-l-4 border-indigo-500 max-w-4xl mx-auto flex flex-col md:flex-row items-center gap-6 developer-card-hover"
+          class="bg-white p-8 rounded-xl shadow-2xl border-l-4 border-indigo-500 max-w-3xl mx-auto flex flex-col md:flex-row items-center gap-6 developer-card-hover"
         >
           <!-- الصورة الشخصية لضياء - أنيميشن مخصص: الظهور من اليسار -->
           <div
             class="flex-shrink-0 animate__animated animate__fadeInLeft animate__delay-1s"
           >
             <img
-              src="image/deyaa.png"
+              src="uploaded:image.jpg-e30cd501-7fdf-47c0-91fb-8d063071afc5"
               alt="صورة المطور ضياء البشرى محمد"
-              class="w-40 h-40 rounded-full object-cover object-top shadow-xl border-4 border-indigo-200"
-              onerror="this.onerror=null; this.src='./image/deyaa.png'"
+              class="w-32 h-32 rounded-full object-cover shadow-xl border-4 border-indigo-200"
+              onerror="this.onerror=null; this.src='https://placehold.co/128x128/ccc/333?text=ضياء'"
             />
           </div>
 
@@ -358,9 +358,9 @@
               </a>
             </div>
 
-            <!-- أزرار التواصل الاجتماعي - تم نقلها هنا -->
+            <!-- أزرار التواصل الاجتماعي -->
             <div
-              class="mt-6 pt-4 border-t text-center border-gray-200 flex justify-center md:justify-end space-x-6 space-x-reverse animate__animated animate__fadeInUp animate__delay-2s"
+              class="mt-6 pt-4 border-t border-gray-200 flex justify-center md:justify-end space-x-6 space-x-reverse animate__animated animate__fadeInUp animate__delay-2s"
             >
               <!-- LinkedIn -->
               <a
@@ -445,7 +445,7 @@
       </div>
     </section>
 
-    <!-- تذييل الصفحة (Footer) - تم إزالة أيقونات التواصل الاجتماعي منه -->
+    <!-- تذييل الصفحة (Footer) -->
     <footer
       class="page-footer text-white py-8 animate__animated animate__fadeInUp animate__delay-3s"
     >
