--- a/index.html
+++ b/index.html
@@ -304,10 +304,9 @@
             class="flex-shrink-0 animate__animated animate__fadeInLeft animate__delay-1s"
           >
             <img
-              src="uploaded:image.jpg-e30cd501-7fdf-47c0-91fb-8d063071afc5"
+              src="/image/deyaa.png"
               alt="صورة المطور ضياء البشرى محمد"
-              class="w-32 h-32 rounded-full object-cover shadow-xl border-4 border-indigo-200"
-              onerror="this.onerror=null; this.src='https://placehold.co/128x128/ccc/333?text=ضياء'"
+              class="w-32 h-32 rounded-full object-cover object-top shadow-xl border-4 border-indigo-200"
             />
           </div>
 
