--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@
             class="flex-shrink-0 animate__animated animate__fadeInLeft animate__delay-1s"
           >
             <img
-              src="/image/deyaa.png"
+              src="./image/deyaa.png"
               alt="صورة المطور ضياء البشرى محمد"
-              class="w-32 h-32 rounded-full object-cover object-top shadow-xl border-4 border-indigo-200"
+              class="w-40 h-40 rounded-full object-cover object-top shadow-xl border-4 border-indigo-200"
             />
           </div>
 
